--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 markdown: rdiscount
 pygments: true
 permalink: pretty
-exclude: ['README.md', 'LICENSE', 'Gemfile', 'Gemfile.lock']
+exclude: ['README.md', 'LICENSE', 'Gemfile', 'Gemfile.lock', 'CNAME']
