--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 markdown: rdiscount
 pygments: true
 permalink: pretty
+paginate: 1
 exclude: ['README.md', 'LICENSE', 'Gemfile', 'Gemfile.lock', 'CNAME']
