Exclude config.codekit

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ markdown: kramdown
 pygments: true
 permalink: pretty
 paginate: 1
-exclude: ['README.md', 'LICENSE', 'Gemfile', 'Gemfile.lock', 'CNAME']
+exclude: ['README.md', 'LICENSE', 'Gemfile', 'Gemfile.lock', 'CNAME', 'config.codekit']
